Fixed photo centering and overflow issues

--- a/public/rushchad.css
+++ b/public/rushchad.css
@@ -6,17 +6,21 @@
 
 }
 
-.panel-photo {
-
-    width:100%;
+.panel-photo img{
+    overflow: hidden;
     height:auto;
+    width:100%;
 }
 
-.picture-carousel {
-    min-height: 300px;
-    max-height: 500px;
-    background-color: black;
+.carousel-container {
+    max-width: 600px;
+    margin: auto;
 }
+.carousel-photo {
+    margin:auto;
+    max-height: 400px;
+}
+
 .absolute-positioning {
     position: fixed;
 }
@@ -33,8 +37,8 @@
 }
 
 .fixed-panel {
-    min-height: 300px;
-    max-height: 300px;
+    min-height: 350px;
+    max-height: 350px;
 }
 
 .table td {
